--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,9 +38,9 @@
     fbq('init', '452830365869084');
     fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
+    <!-- <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=452830365869084&ev=PageView&noscript=1"
-    /></noscript>
+    /></noscript> -->
     <!-- End Facebook Pixel Code -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
